--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="options">
+            <div class="rock option">rock</div>
+            <div class="paper option">paper</div>
+            <div class="scissors option">scissors</div>
+        </div>
+        <div>
+            <div class="outcome ui"></div>
+            <div class="score ui" ></div>
+        </div>
+
+    </div>  
     
 </body>
 </html>
